# bevy_spine

./: Cargo.toml  changelog.md  readme.md
.github/workflows/: ci.yml
examples/: 3d.rs  crossfades.rs  custom_material.rs  events.rs  ik.rs  immediate_spawn.rs  simple.rs  ui_showcase.rs  ui_spine_showcase.rs
examples/spineboy/: bullet.rs  main.rs  player.rs
src/: assets.rs  crossfades.rs  direct_render.rs  entity_sync.rs  handle.rs  lib.rs  materials.rs  spine.wgsl  textures.rs  ui.rs
