[package]
name = "bevy_spine"
version = "0.14.1"
edition = "2024"
description = "Spine plugin for Bevy utilizing rusty_spine"
homepage = "https://github.com/jabuwu/bevy_spine"
repository = "https://github.com/jabuwu/bevy_spine"
readme = "readme.md"
license-file = "LICENSE"
exclude = ["assets/*"]

[features]
default = []
ui = ["bevy/bevy_ui"]

[dependencies]
rusty_spine = "0.8"
bevy = { version = "0.18", default-features = false, features = [
  "bevy_render",
  "bevy_asset",
  "bevy_sprite",
  "bevy_sprite_render",
] }
glam = { version = "0.30", features = ["mint"] }
thiserror = "2.0.18"

[dev-dependencies]
lerp = "0.5"
bevy = { version = "0.18", default-features = true, features = [
  "bevy_ui_debug",
] }

[workspace]
resolver = "2"
members = ["ci"]

[[example]]
name = "ui_showcase"
required-features = ["ui"]
