[package]
name = "bevy_spine"
version = "0.11.0"
edition = "2024"
description = "Spine plugin for Bevy utilizing rusty_spine"
authors = [
  "jabuwu (https://github.com/jabuwu)",
  "mirsella (https://github.com/mirsella)",
]
homepage = "https://github.com/mirsella/bevy_spine"
repository = "https://github.com/mirsella/bevy_spine"
readme = "readme.md"
license-file = "LICENSE"
rust-version = "1.89"
exclude = ["assets/*"]

[features]
default = []
ui = ["bevy/bevy_ui"]
ui_picking_backend = ["bevy/bevy_ui_picking_backend"]

[dependencies]
rusty_spine = "0.8"
bevy = { version = "0.17", default-features = false, features = [
  "bevy_log",
  "bevy_render",
  "bevy_asset",
  "bevy_sprite",
  "bevy_sprite_render",
] }
glam = { version = "0.30", features = ["mint"] }
thiserror = "2.0.18"

[dev-dependencies]
lerp = "0.5"
bevy = { version = "0.17", default-features = true, features = [
  "bevy_ui_debug",
] }

[workspace]
resolver = "2"
members = ["ci"]

[patch.crates-io]
bevy = { git = "https://github.com/mirsella/bevy", branch = "release-0.17.3" }

[[example]]
name = "ui_showcase"
required-features = ["ui"]
